--- a/ckanext/datesearch/templates/package/search.html
+++ b/ckanext/datesearch/templates/package/search.html
@@ -13,9 +13,17 @@
       <a href="{{ h.remove_url_param(['ext_startdate', 'ext_enddate']) }}" class="action">{{ _('Clear') }}</a>
     </h2>
     <div class="module-content input-prepend input-daterange" data-module="daterange-query" id="datepicker">
-      <input type="text" class="input-mini" style="cursor:pointer;" readonly="" name="start" id="start" data-module="daterangepicker-module" />
+
+      {% set publication_year = h.get_earliest_publication_year() %}
+
+      <input type="text" class="input-mini" style="cursor:pointer;" name="start" id="start" data-module="daterangepicker-module" readonly="true"
+	    data-module-earliest_publication_year= "{{ publication_year }}" />
+
       <span class="add-on" style="border:none;background-color:#ffffff;">&nbsp;&nbsp;to&nbsp;&nbsp;</span>
-      <input type="text" class="input-mini" style="cursor:pointer;" readonly="" name="end" id="end" data-module="daterangepicker-module" />
+
+      <input type="text" class="input-mini" style="cursor:pointer;" name="end" id="end" data-module="daterangepicker-module" readonly="true"
+	    data-module-earliest_publication_year= "{{ publication_year }}" />
+
     </div>
   </section>
 
