--- a/ckanext/datesearch/templates/package/search.html
+++ b/ckanext/datesearch/templates/package/search.html
@@ -9,7 +9,7 @@
   {# This <section> is the date-range picker widget in the sidebar. #}
   <section class="module module-narrow module-shallow">
     <h2 class="module-heading">
-      <i class="icon-medium icon-calendar"></i> {{ _('Publication Year') }}
+      <i class="fa fa-calendar"></i> {{ _('Publication Year') }}
       <a href="{{ h.remove_url_param(['ext_startdate', 'ext_enddate']) }}" class="action">{{ _('Clear') }}</a>
     </h2>
     <div class="module-content input-prepend input-daterange" data-module="daterange-query" id="datepicker">
