--- a/ckanext/datesearch/templates/package/search.html
+++ b/ckanext/datesearch/templates/package/search.html
@@ -12,19 +12,25 @@
       <i class="fa fa-calendar"></i> {{ _('Publication Year') }}
       <a href="{{ h.remove_url_param(['ext_startdate', 'ext_enddate']) }}" class="action">{{ _('Clear') }}</a>
     </h2>
-    <div class="module-content input-prepend input-daterange" data-module="daterange-query" id="datepicker">
 
-      {% set publication_year = h.get_earliest_publication_year() %}
+    {% set publication_year = h.get_earliest_publication_year() %}
 
-      <input type="text" class="input-mini" style="cursor:pointer;" name="start" id="start" data-module="daterangepicker-module" readonly="true"
-	    data-module-earliest_publication_year= "{{ publication_year }}" />
-
-      <span class="add-on" style="border:none;background-color:#ffffff;">&nbsp;&nbsp;to&nbsp;&nbsp;</span>
-
-      <input type="text" class="input-mini" style="cursor:pointer;" name="end" id="end" data-module="daterangepicker-module" readonly="true"
-	    data-module-earliest_publication_year= "{{ publication_year }}" />
-
+    <div class="row" style="height: 50px; padding-top: 10px; align-items: center">
+      <div class="col-xs-1" style="padding: 6px 12px; height: 34px;">
+      </div>
+      <div class="col-xs-4" style="padding-right: 0px; vert-align: middle">
+        <input class="form-control input-sm text-center" type="text" style="cursor:pointer;" name="start" id="start" data-module="daterangepicker-module" readonly="true"
+            data-module-earliest_publication_year= "{{ publication_year }}">
+      </div>
+      <div class="col-xs-2" style="padding: 6px 12px; height: 34px;">
+        <span class="add-on">&nbsp;&nbsp;to</span>
+      </div>
+      <div class="col-xs-4" style="padding-left: 0px;">
+        <input class="form-control input-sm text-center" type="text" style="cursor:pointer;" name="end" id="end" data-module="daterangepicker-module" readonly="true"
+            data-module-earliest_publication_year= "{{ publication_year }}">
+      </div>
     </div>
+
   </section>
 
   {{ super() }}
