Migrate javascript registration to CKAN 2.9

--- a/ckanext/datesearch/templates/package/search.html
+++ b/ckanext/datesearch/templates/package/search.html
@@ -1,10 +1,8 @@
 {% ckan_extends %}
 
 {% block secondary_content %}
-  {% resource 'ckanext-datesearch/moment.js' %}
-  {% resource 'ckanext-datesearch/datepicker.css' %}
-  {% resource 'ckanext-datesearch/bootstrap-datepicker.js' %}
-  {% resource 'ckanext-datesearch/daterangepicker-module.js' %}
+  {% asset 'ckanext-datesearch/datesearch-js' %}
+  {% asset 'ckanext-datesearch/datesearch-css' %}
 
   {# This <section> is the date-range picker widget in the sidebar. #}
   <section class="module module-narrow module-shallow">
