--- a/ckanext/datesearch/templates/package/search.html
+++ b/ckanext/datesearch/templates/package/search.html
@@ -17,15 +17,13 @@
       <div class="col-xs-1" style="padding: 6px 12px; height: 34px;">
       </div>
       <div class="col-xs-4" style="padding-right: 0px; vert-align: middle">
-        <input class="form-control input-sm text-center" type="text" style="cursor:pointer;" name="start" id="start" data-module="daterangepicker-module" readonly="true"
-            data-module-earliest_publication_year= "{{ publication_year }}">
+        <input class="form-control input-sm text-center" type="text" style="cursor:pointer;" name="start" id="start" data-module="daterangepicker-module"> 
       </div>
       <div class="col-xs-2" style="padding: 6px 12px; height: 34px;">
         <span class="add-on">&nbsp;&nbsp;to</span>
       </div>
       <div class="col-xs-4" style="padding-left: 0px;">
-        <input class="form-control input-sm text-center" type="text" style="cursor:pointer;" name="end" id="end" data-module="daterangepicker-module" readonly="true"
-            data-module-earliest_publication_year= "{{ publication_year }}">
+        <input class="form-control input-sm text-center" type="text" style="cursor:pointer;" name="end" id="end" data-module="daterangepicker-module">
       </div>
     </div>
 
