--- a/ckanext/extentsearch/templates/package/search.html
+++ b/ckanext/extentsearch/templates/package/search.html
@@ -1,13 +1,13 @@
 {% ckan_extends %}
 
 {% block secondary_content %}
-  {% asset 'ckanext-datesearch/datesearch-js' %}
-  {% asset 'ckanext-datesearch/datesearch-css' %}
+  {% asset 'ckanext-extentsearch/extentsearch-js' %}
+  {% asset 'ckanext-extentsearch/extentsearch-css' %}
 
   {# This <section> is the date-range picker widget in the sidebar. #}
   <section class="module module-narrow module-shallow">
     <h2 class="module-heading">
-      <i class="fa fa-calendar"></i> {{ _('Publication Year') }}
+      <i class="fa fa-calendar"></i> {{ _('Data Temporal Extent') }}
       <a href="{{ h.remove_url_param(['ext_startdate', 'ext_enddate']) }}" class="action">{{ _('Clear') }}</a>
     </h2>
 
