DSET-640 Name URL params consistently

--- a/ckanext/extentsearch/templates/package/search.html
+++ b/ckanext/extentsearch/templates/package/search.html
@@ -8,7 +8,7 @@
   <section class="module module-narrow module-shallow">
     <h2 class="module-heading">
       <i class="fa fa-calendar"></i> {{ _('Dataset Temporal Extent') }}
-      <a href="{{ h.remove_url_param(['ext_start', 'ext_end']) }}" class="action">{{ _('Clear') }}</a>
+      <a href="{{ h.remove_url_param(['ext_ds_start', 'ext_ds_end']) }}" class="action">{{ _('Clear') }}</a>
     </h2>
 
     {% set ds_startyear = '1800' %}
