DSET-640 Simplify Filter Language

--- a/ckanext/extentsearch/templates/package/search.html
+++ b/ckanext/extentsearch/templates/package/search.html
@@ -7,7 +7,7 @@
   {# This <section> is the date-range picker widget in the sidebar. #}
   <section class="module module-narrow module-shallow">
     <h2 class="module-heading">
-      <i class="fa fa-calendar"></i> {{ _('Dataset Temporal Extent') }}
+      <i class="fa fa-calendar"></i> {{ _('Temporal Range') }}
       <a href="{{ h.remove_url_param(['ext_ds_start', 'ext_ds_end']) }}" class="action">{{ _('Clear') }}</a>
     </h2>
 
