--- a/ckanext/extentsearch/templates/package/search.html
+++ b/ckanext/extentsearch/templates/package/search.html
@@ -14,16 +14,14 @@
     {% set ds_startyear = '1800' %}
 
     <div class="row" style="height: 50px; padding-top: 10px; align-items: center">
-      <div class="col-xs-1" style="padding: 6px 12px; height: 34px;">
-      </div>
-      <div class="col-xs-4" style="padding-right: 0px; vert-align: middle">
+      <div class="col" style="padding-right: 0px; vert-align: middle">
         <input class="form-control input-sm text-center" type="text" style="cursor:pointer;" name="start" id="ds_start" data-module="ds-daterangepicker-module" readonly="true"
             data-module-earliest_startyear= "{{ ds_startyear }}">
       </div>
-      <div class="col-xs-2" style="padding: 6px 12px; height: 34px;">
+      <div class="col" style="padding: 6px 12px; height: 34px;">
         <span class="add-on">&nbsp;&nbsp;to</span>
       </div>
-      <div class="col-xs-4" style="padding-left: 0px;">
+      <div class="col" style="padding-left: 0px;">
         <input class="form-control input-sm text-center" type="text" style="cursor:pointer;" name="end" id="ds_end" data-module="ds-daterangepicker-module" readonly="true"
             data-module-earliest_startyear = "{{ ds_startyear }}">
       </div>
